--- a/public/style.css
+++ b/public/style.css
@@ -20,6 +20,12 @@ form div {
   display: inline-block;
 }
 
+#icons {
+  max-width: 300px;
+  display: flex;
+  justify-content: space-around;
+}
+
 #formSpace.field {
   display: flex;
   justify-content: space-between;
