--- a/public/style.css
+++ b/public/style.css
@@ -39,11 +39,14 @@ form div {
 .modalContent {
   display: flex;
   flex-direction: column;
-  margin: 0 60px;
+  width: 70vw;
+  min-width: 290px;
+  margin: 0 5vw;
 }
 
 .ui.modal.transition.visible.active {
-  width: 650px;
+  width: 85vw;
+  min-width: 350px;
 }
 
 .ui.embed {
@@ -67,6 +70,7 @@ form div {
   border-radius: 25px;
   margin: 15px;
   width: 20em;
+  min-width: 17em;
   height: 13em;
   overflow: hidden;
   background-color: rgba(0, 128, 128, 0.575);
@@ -94,4 +98,47 @@ form div {
 
 #PJpadding {
   padding: 20px;
+}
+
+
+
+#test {
+	text-transform: uppercase;
+	letter-spacing: .5em;
+	display: inline-block;
+	border: 4px double rgba(255,255,255,.25);
+	border-width: 4px 0;
+	padding: 1.5em 0em;
+	position: absolute;
+  /* top: 18%; */
+  top: 11em;
+	left: 50%;
+  width: 42em;
+  min-width: 25em;
+	margin: 0 0 0 -20em;
+}
+
+span {
+  font: 700 4em/1 "Oswald", sans-serif;
+  letter-spacing: 0;
+  padding: .25em 0 .325em;
+  display: block;
+  margin: 0 auto;
+  text-shadow: 0 0 80px rgba(255,255,255,.5);
+
+  background: url(http://f.cl.ly/items/010q3E1u3p2Q0j1L1S1o/animated_text_fill.png) repeat-y;
+  -webkit-background-clip: text;
+  background-clip: text;
+
+  -webkit-text-fill-color: transparent;
+  -webkit-animation: aitf 80s linear infinite;
+
+  -webkit-transform: translate3d(0,0,0);
+  -webkit-backface-visibility: hidden;
+}
+
+
+@-webkit-keyframes aitf {
+	0% { background-position: 0% 50%; }
+	100% { background-position: 100% 50%; }
 }
