--- a/public/style.css
+++ b/public/style.css
@@ -61,6 +61,10 @@ form div {
   margin: 0 5vw;
 }
 
+#project.ui.vertical.segment {
+  padding-top: 51px !important;
+}
+
 #projectHeader {
   text-align: center
 }
@@ -100,9 +104,17 @@ form div {
   padding: 20px;
 }
 
+#skill {
+  background-image: url('profile.jpeg');
+  background-attachment: fixed;
+}
+
+#skillContent {
+  padding-bottom: 61px;
+}
 
 
-#test {
+#cssAnimation {
 	text-transform: uppercase;
 	letter-spacing: .5em;
 	display: inline-block;
@@ -110,7 +122,6 @@ form div {
 	border-width: 4px 0;
 	padding: 1.5em 0em;
 	position: absolute;
-  /* top: 18%; */
   top: 11em;
 	left: 50%;
   width: 42em;
