--- a/public/style.css
+++ b/public/style.css
@@ -70,7 +70,8 @@ form div {
 }
 
 #projectCard {
-  background-image: url('profile.jpeg');
+  /* background-image: url('forest.jpeg'); */
+  background-size: 110%;
   border-radius: 25px;
   margin: 15px;
   width: 20em;
@@ -78,8 +79,8 @@ form div {
   height: 13em;
   overflow: hidden;
   background-color: rgba(0, 128, 128, 0.575);
-  -webkit-transition-duration: 0.6s;
-  transition-duration: 0.6s;
+  -webkit-transition-duration: 0.5s;
+  transition-duration: 0.5s;
 }
 
 #projectCard:hover {
@@ -105,12 +106,22 @@ form div {
 }
 
 #skill {
-  background-image: url('profile.jpeg');
+  background-image: url('skillback.jpeg');
+  background-size: 100%;
+  background-position-y: 75%;
   background-attachment: fixed;
 }
 
 #skillContent {
   padding-bottom: 61px;
+}
+
+#skillEachContent {
+  background-color: rgba(209, 245, 245, 0.801);
+  border-radius: 25px;
+  width: 36vw;
+  min-width: 250px;
+  padding: 5vw;
 }
 
 
@@ -137,12 +148,15 @@ span {
   margin: 0 auto;
   text-shadow: 0 0 80px rgba(255,255,255,.5);
 
-  background: url(http://f.cl.ly/items/010q3E1u3p2Q0j1L1S1o/animated_text_fill.png) repeat-y;
+  /* background: url('http://f.cl.ly/items/010q3E1u3p2Q0j1L1S1o/animated_text_fill.png') repeat-y; */
+  background: url('sky.jpeg') repeat-x;
+  background-size: 50%;
   -webkit-background-clip: text;
   background-clip: text;
 
   -webkit-text-fill-color: transparent;
-  -webkit-animation: aitf 80s linear infinite;
+  /* -webkit-animation: aitf 80s linear infinite; */
+  -webkit-animation: aitf 3s linear infinite;
 
   -webkit-transform: translate3d(0,0,0);
   -webkit-backface-visibility: hidden;
